Visualizing changing in latent reconstruction via plotting multiple graphs

--- a/Conv1D_VAE.ipynb
+++ b/Conv1D_VAE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(307200, 4)\n(300, 1024, 4)\n(10, 1024, 4)\n"
+      "(204800, 4)\n(200, 1024, 4)\n(10, 1024, 4)\n"
      ]
     }
    ],
@@ -26,15 +26,14 @@
     "from keras.models import Model\n",
     "from keras import backend as K\n",
     "\n",
-    "beta = 1\n",
     "n_features = 4\n",
-    "boat_csv = pd.read_csv(\"Data/Boat_nominal_data/Boat_nominal_sequences.csv\")\n",
+    "boat_csv = pd.read_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
     "boat_csv = boat_csv.drop(columns=[\"Unnamed: 0\", \"M0C\", \"M1C\", \"Acceleration\",\"Speed\"])\n",
     "scaler = StandardScaler()\n",
     "normal_data = scaler.fit_transform(boat_csv)\n",
     "print(normal_data.shape)\n",
     "\n",
-    "boat_val = pd.read_csv(\"Data/Boat_nominal_data/Boat_sequences_val_nom.csv\")\n",
+    "boat_val = pd.read_csv(\"Data/Boat_nominal_data/Boat_sequence_mix_val.csv\")\n",
     "boat_val = boat_val.drop(columns=[\"Unnamed: 0\", \"M0C\", \"M1C\", \"Acceleration\",\"Speed\"])\n",
     "scaler = StandardScaler()\n",
     "val_nom_data = scaler.fit_transform(boat_val)\n",
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -72,14 +71,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__________________________________________________________________________________________________\nLayer (type)                    Output Shape         Param #     Connected to                     \n==================================================================================================\nencoder_input (InputLayer)      (None, 1024, 4)      0                                            \n__________________________________________________________________________________________________\nconv1d_55 (Conv1D)              (None, 1024, 64)     1856        encoder_input[0][0]              \n__________________________________________________________________________________________________\nmax_pooling1d_25 (MaxPooling1D) (None, 512, 64)      0           conv1d_55[0][0]                  \n__________________________________________________________________________________________________\nconv1d_56 (Conv1D)              (None, 512, 32)      14368       max_pooling1d_25[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_26 (MaxPooling1D) (None, 256, 32)      0           conv1d_56[0][0]                  \n__________________________________________________________________________________________________\nconv1d_57 (Conv1D)              (None, 256, 16)      3600        max_pooling1d_26[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_27 (MaxPooling1D) (None, 128, 16)      0           conv1d_57[0][0]                  \n__________________________________________________________________________________________________\nconv1d_58 (Conv1D)              (None, 128, 8)       904         max_pooling1d_27[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_28 (MaxPooling1D) (None, 64, 8)        0           conv1d_58[0][0]                  \n__________________________________________________________________________________________________\nflatten_7 (Flatten)             (None, 512)          0           max_pooling1d_28[0][0]           \n__________________________________________________________________________________________________\nz_mean (Dense)                  (None, 6)            3078        flatten_7[0][0]                  \n__________________________________________________________________________________________________\nz_log_var (Dense)               (None, 6)            3078        flatten_7[0][0]                  \n__________________________________________________________________________________________________\nz (Lambda)                      (None, 6)            0           z_mean[0][0]                     \n                                                                 z_log_var[0][0]                  \n==================================================================================================\nTotal params: 26,884\nTrainable params: 26,884\nNon-trainable params: 0\n__________________________________________________________________________________________________\n"
+      "__________________________________________________________________________________________________\nLayer (type)                    Output Shape         Param #     Connected to                     \n==================================================================================================\nencoder_input (InputLayer)      (None, 1024, 4)      0                                            \n__________________________________________________________________________________________________\nconv1d_19 (Conv1D)              (None, 1024, 64)     1856        encoder_input[0][0]              \n__________________________________________________________________________________________________\nmax_pooling1d_9 (MaxPooling1D)  (None, 512, 64)      0           conv1d_19[0][0]                  \n__________________________________________________________________________________________________\nconv1d_20 (Conv1D)              (None, 512, 32)      14368       max_pooling1d_9[0][0]            \n__________________________________________________________________________________________________\nmax_pooling1d_10 (MaxPooling1D) (None, 256, 32)      0           conv1d_20[0][0]                  \n__________________________________________________________________________________________________\nconv1d_21 (Conv1D)              (None, 256, 16)      3600        max_pooling1d_10[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_11 (MaxPooling1D) (None, 128, 16)      0           conv1d_21[0][0]                  \n__________________________________________________________________________________________________\nconv1d_22 (Conv1D)              (None, 128, 8)       904         max_pooling1d_11[0][0]           \n__________________________________________________________________________________________________\nmax_pooling1d_12 (MaxPooling1D) (None, 64, 8)        0           conv1d_22[0][0]                  \n__________________________________________________________________________________________________\nflatten_3 (Flatten)             (None, 512)          0           max_pooling1d_12[0][0]           \n__________________________________________________________________________________________________\nz_mean (Dense)                  (None, 6)            3078        flatten_3[0][0]                  \n__________________________________________________________________________________________________\nz_log_var (Dense)               (None, 6)            3078        flatten_3[0][0]                  \n__________________________________________________________________________________________________\nz (Lambda)                      (None, 6)            0           z_mean[0][0]                     \n                                                                 z_log_var[0][0]                  \n==================================================================================================\nTotal params: 26,884\nTrainable params: 26,884\nNon-trainable params: 0\n__________________________________________________________________________________________________\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nz_sampling (InputLayer)      (None, 6)                 0         \n_________________________________________________________________\nDense_after_sampling (Dense) (None, 512)               3584      \n_________________________________________________________________\nreshape_7 (Reshape)          (None, 64, 8)             0         \n_________________________________________________________________\nconv1d_59 (Conv1D)           (None, 64, 8)             456       \n_________________________________________________________________\nup_sampling1d_25 (UpSampling (None, 128, 8)            0         \n_________________________________________________________________\nconv1d_60 (Conv1D)           (None, 128, 16)           912       \n_________________________________________________________________\nup_sampling1d_26 (UpSampling (None, 256, 16)           0         \n_________________________________________________________________\nconv1d_61 (Conv1D)           (None, 256, 32)           3616      \n_________________________________________________________________\nup_sampling1d_27 (UpSampling (None, 512, 32)           0         \n_________________________________________________________________\nconv1d_62 (Conv1D)           (None, 512, 64)           14400     \n_________________________________________________________________\nup_sampling1d_28 (UpSampling (None, 1024, 64)          0         \n_________________________________________________________________\nconv1d_63 (Conv1D)           (None, 1024, 4)           1796      \n=================================================================\nTotal params: 24,764\nTrainable params: 24,764\nNon-trainable params: 0\n_________________________________________________________________\n"
+      "_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nz_sampling (InputLayer)      (None, 6)                 0         \n_________________________________________________________________\nDense_after_sampling (Dense) (None, 512)               3584      \n_________________________________________________________________\nreshape_3 (Reshape)          (None, 64, 8)             0         \n_________________________________________________________________\nconv1d_23 (Conv1D)           (None, 64, 8)             456       \n_________________________________________________________________\nup_sampling1d_9 (UpSampling1 (None, 128, 8)            0         \n_________________________________________________________________\nconv1d_24 (Conv1D)           (None, 128, 16)           912       \n_________________________________________________________________\nup_sampling1d_10 (UpSampling (None, 256, 16)           0         \n_________________________________________________________________\nconv1d_25 (Conv1D)           (None, 256, 32)           3616      \n_________________________________________________________________\nup_sampling1d_11 (UpSampling (None, 512, 32)           0         \n_________________________________________________________________\nconv1d_26 (Conv1D)           (None, 512, 64)           14400     \n_________________________________________________________________\nup_sampling1d_12 (UpSampling (None, 1024, 64)          0         \n_________________________________________________________________\nconv1d_27 (Conv1D)           (None, 1024, 4)           1796      \n=================================================================\nTotal params: 24,764\nTrainable params: 24,764\nNon-trainable params: 0\n_________________________________________________________________\n"
      ]
     }
    ],
@@ -147,7 +146,7 @@
     "\n",
     "reconstruction_loss = mse(K.flatten(inputs), K.flatten(outputs))\n",
     "kl_loss = - 0.5 * K.mean(1 + z_log_var - K.square(z_mean) - K.exp(z_log_var))\n",
-    "loss = reconstruction_loss + beta*kl_loss\n",
+    "loss = reconstruction_loss + 1*kl_loss\n",
     "vae.add_loss(loss)\n",
     "\n",
     "vae.compile(optimizer='rmsprop', metrics= ['accuracy'])\n"
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -216,29 +215,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 (300, 6)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
     "nom_enc = encoder.predict(trainX_nominal)\n",
     "print(len(nom_enc), nom_enc[0].shape)\n",
+    "\n",
+    "labels = pd.read_csv(\"Data/Boat_nominal_data/Boat_mix_labels.csv\")\n",
+    "labels = labels.drop(columns=\"Unnamed: 0\")\n",
+    "labels = np.array(labels)\n",
+    "\n",
+    "mat_mask = np.array([labels for i in range(latent_dim)])\n",
+    "print(mat_mask.shape)\n",
     "\n",
     "def get_neuron_values():\n",
     "    neurons_m = []\n",
@@ -254,18 +243,60 @@
     "    return neurons_m, neurons_var\n",
     "\n",
     "\n",
-    "neurons_m, neurons_var = get_neuron_values()\n",
-    "\n",
+    "neurons_m, neurons_var = get_neuron_values()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def nominal_parameters():\n",
-    "    neuron_avg = np.average(neurons_m, axis=1)\n",
+    "    neuron_avg_nom = np.ma.array(neurons_m, mask=np.logical_not(mat_mask))\n",
+    "    neuron_avg_nom = np.mean(neuron_avg_nom, axis=1)\n",
+    "    neuron_var_nom = np.ma.array(neurons_var, mask=np.logical_not(mat_mask))\n",
+    "    neuron_var_nom = np.mean(neuron_var_nom, axis=1)\n",
+    "     \n",
+    "    neuron_avg_anom = np.ma.array(neurons_m, mask=mat_mask)\n",
+    "    neuron_avg_anom = np.mean(neuron_avg_anom, axis=1)\n",
+    "    neuron_var_anom = np.ma.array(neurons_var, mask=mat_mask)\n",
+    "    neuron_var_anom = np.mean(neuron_var_anom, axis=1)\n",
     "    \n",
-    "    neuron_var = np.average(neurons_var, axis=1)\n",
+    "    return neuron_avg_nom, neuron_var_nom, neuron_avg_anom, neuron_var_anom\n",
     "\n",
-    "    return neuron_avg, neuron_var\n",
     "\n",
-    "neuron_avg, neuron_var = nominal_parameters()\n",
-    "print(len(neuron_avg), len(neuron_var))\n"
+    "n_avg_nom, n_var_nom, n_avg_anom, n_var_anom = nominal_parameters()\n",
+    "print(len(n_avg_nom), len(n_var_nom), len(n_avg_nom), len(n_var_anom))\n"
+   ]
+  },
+  {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 1,
+   "source": [
+    "DIFFERENCES IN ENCODING OF NOMINAL AND ANOMALOUS BEHAVIOUR VISUALIZATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_difference(avg_n, var_n, avg_an, var_an):\n",
+    "    plt.plot(avg_n)\n",
+    "    plt.plot(avg_an)\n",
+    "    plt.title(\"MEAN\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "    plt.plot(var_n)\n",
+    "    plt.plot(var_an)\n",
+    "    plt.title(\"STD\")\n",
+    "    plt.show()\n",
+    "\n",
+    "visualize_difference(n_avg_nom, n_var_nom, n_avg_anom, n_var_anom)"
    ]
   },
   {
@@ -278,22 +309,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.08811088  0.1255463   0.01701382 -0.08566583  0.1815099  -0.00088965] [ 0.16391774  0.00667964 -0.08026419 -0.01931977 -0.09087465  0.04685581]\n"
+     ]
+    }
+   ],
    "source": [
-    "def visualize_difference():\n",
-    "    plt.plot(anom_data_encoding[0])\n",
-    "    plt.plot(neuron_avg)\n",
-    "    plt.title(\"MEAN\")\n",
-    "    plt.show()\n",
-    "    \n",
-    "    plt.plot(anom_data_encoding[1])\n",
-    "    plt.plot(neuron_var)\n",
-    "    plt.title(\"STD\")\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
     "boat_anom_csv = pd.read_csv(\"Data/Boat_anom_sequence.csv\")\n",
     "boat_anom_csv = boat_anom_csv.drop(columns=[\"Unnamed: 0\",\"Speed\", \"Acceleration\",\n",
     "                                            \"M0C\", \"M1C\"])\n",
@@ -303,9 +330,7 @@
     "\n",
     "anom_means = anom_data_encoding[0]\n",
     "anom_var = anom_data_encoding[1]\n",
-    "print(anom_means, anom_var)\n",
-    "\n",
-    "visualize_difference()\n"
+    "print(anom_means, anom_var)\n"
    ]
   },
   {
@@ -319,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +360,8 @@
     "    run = decoder.predict(latents)\n",
     "    run_df = pd.DataFrame(run[0], columns=boat_csv.columns)\n",
     "    \n",
-    "    plt.plot(run_df[\"Lon\"], run_df[\"Lat\"])\n",
+    "    plt.plot(run_df[\"Sin\"])\n",
+    "    plt.plot(run_df[\"Lat\"])\n",
     "    plt.show()\n",
     "    \n",
     "\n",
@@ -346,13 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "changes = np.linspace(0,6,50)\n",
+    "changes = np.linspace(0,10,50)\n",
+    "neur = 5\n",
     "for i in changes:\n",
-    "    sample_nominal[2] = sample_anomalous[2]*i\n",
+    "    sample_nominal[neur] = sample_anomalous[neur]*i\n",
     "    #visualize_latent_sampled(sample_nominal, sample_anomalous)\n",
     "    reconstruct_from_latent_vectors(sample_nominal)\n",
     "# reconstruct_from_latent_vectors(sample_anomalous)\n"
@@ -369,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
