--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,20 +373,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = create_nom_data()\n",
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
-    "for i in range(1):\n",
-    "    choice = np.random.choice([0,1], p=[1., 0.])\n",
+    "for i in range(200):\n",
+    "    choice = np.random.choice([0,1], p=[0.1, 0.9])\n",
     "    if choice == 0:\n",
-    "        nom_list.append(1)\n",
+    "        nom_list.append(False)\n",
     "        data = create_anom_data()\n",
     "    else:\n",
-    "        nom_list.append(0)\n",
+    "        nom_list.append(True)\n",
     "        data = create_nom_data()\n",
     "    df = df.append(data)\n",
     "\n",
@@ -395,21 +395,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "validation = False\n",
-    "anomalous = True\n",
-    "# if not validation:\n",
-    "#     df.to_csv(\"Data/Boat_nominal_data/Boat_nominal_sequences.csv\")\n",
-    "#     label_df.to_csv(\"Data/Boat_nominal_data/Boat_mix_labels.csv\")\n",
-    "# if validation:\n",
-    "#     df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_val_nom.csv\")\n",
+    "# anomalous = True\n",
+    "if not validation:\n",
+    "    df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
+    "    label_df.to_csv(\"Data/Boat_nominal_data/Boat_mix_labels.csv\")\n",
+    "if validation:\n",
+    "    df.to_csv(\"Data/Boat_nominal_data/Boat_sequence_mix_val.csv\")\n",
     "\n",
-    "if anomalous:\n",
-    "    df.to_csv(\"Data/Boat_anom_sequence.csv\")"
+    "# if anomalous:\n",
+    "#     df.to_csv(\"Data/Boat_anom_sequence.csv\")"
    ]
   },
   {
