Multiple models with increasing beta

--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "def create_anom_data():\n",
+    "def create_anom_data(minus):\n",
     "    def headingFromCoordinates(lat1, lon1, lat2, lon2): \n",
     "        if(lon2-lon1 < 0): #2nd and 3rd quadrant \n",
     "            heading =180 - degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2)))) \n",
@@ -270,9 +270,9 @@
     "    \n",
     "    k = np.linspace(-3,3, vertical_length+1) \n",
     "    \n",
-    "    def modify_angle(angle, index):\n",
+    "    def modify_angle(index):\n",
     "        change = 5*2.5*np.exp(-np.power(k[index], 2.) / (2 * np.power(1, 2.)))\n",
-    "        return angle - change\n",
+    "        return change\n",
     "    \n",
     "    for i, elem in enumerate(lats):\n",
     "        lats[i] = noise_lat(elem)   \n",
@@ -311,7 +311,10 @@
     "            dl = l / vertical_length\n",
     "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
     "            for j in range(1, vertical_length):\n",
-    "                alpha_m = modify_angle(alpha, j)\n",
+    "                if minus:\n",
+    "                    alpha_m = alpha - modify_angle(j)\n",
+    "                else:\n",
+    "                    alpha_m = alpha + modify_angle(j)\n",
     "                dgr_mod.append(alpha_m)\n",
     "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha_m)))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
@@ -328,7 +331,10 @@
     "        index = 1\n",
     "        for i, deg in enumerate(dgr):\n",
     "            if abs(deg - 287.5) < 10:\n",
-    "                dgr_mod.append(modify_angle(deg,index))    \n",
+    "                if minus:\n",
+    "                    dgr_mod.append(deg - modify_angle(index))    \n",
+    "                else:\n",
+    "                    dgr_mod.append(deg + modify_angle(index))\n",
     "                index += 1\n",
     "            else:\n",
     "                dgr_mod.append(deg)\n",
@@ -381,11 +387,14 @@
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
     "for i in range(200):\n",
-    "    choice = np.random.choice([0,1], p=[0.1, 0.9])\n",
+    "    choice = np.random.choice([0, 1, 2], p=[0.1, 0.1, 0.8])\n",
     "    if choice == 0:\n",
     "        nom_list.append(False)\n",
-    "        data = create_anom_data()\n",
-    "    else:\n",
+    "        data = create_anom_data(True)\n",
+    "    if choice == 1:\n",
+    "        nom_list.append(False)\n",
+    "        data = create_anom_data(False)\n",
+    "    if choice == 2:\n",
     "        nom_list.append(True)\n",
     "        data = create_nom_data()\n",
     "    df = df.append(data)\n",
