Multiple models with increasing beta

--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "def create_anom_data(minus):\n",
+    "def create_anom_data(minus, both):\n",
     "    def headingFromCoordinates(lat1, lon1, lat2, lon2): \n",
     "        if(lon2-lon1 < 0): #2nd and 3rd quadrant \n",
     "            heading =180 - degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2)))) \n",
@@ -297,14 +297,18 @@
     "            dl = l / vertical_length\n",
     "            alpha = 180 - headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
     "            for j in range(1, vertical_length):\n",
-    "                dgr_mod.append(alpha+40)\n",
-    "                g_lon.append(noise_lon((start_lon - (j * dl * cos(radians(alpha))))))\n",
-    "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha)))))\n",
+    "                if minus and both:\n",
+    "                    alpha_m = alpha - modify_angle(j)\n",
+    "                elif not minus and both:\n",
+    "                    alpha_m = alpha + modify_angle(j)\n",
+    "                else:\n",
+    "                    alpha_m = alpha\n",
+    "                g_lon.append(noise_lon((start_lon - (j * dl * cos(radians(alpha_m))))))\n",
+    "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
     "        if i % 4 == 1:\n",
     "            dl = l / orizontal_length\n",
     "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
     "            for j in range(1, orizontal_length):\n",
-    "                dgr_mod.append(alpha)\n",
     "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha)))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha)))))\n",
     "        if i % 4 == 2:\n",
@@ -315,14 +319,12 @@
     "                    alpha_m = alpha - modify_angle(j)\n",
     "                else:\n",
     "                    alpha_m = alpha + modify_angle(j)\n",
-    "                dgr_mod.append(alpha_m)\n",
     "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha_m)))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
     "        if i % 4 == 3:\n",
     "            dl = l / orizontal_length\n",
     "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
     "            for j in range(1, orizontal_length):\n",
-    "                dgr_mod.append(alpha)\n",
     "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha)))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha)))))\n",
     "    \n",
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,14 +389,20 @@
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
     "for i in range(500):\n",
-    "    choice = np.random.choice([0, 1, 2], p=[0.1, 0.1, 0.8])\n",
+    "    choice = np.random.choice([0, 1, 2, 3,4], p=[0.1, 0.1, 0.1, 0.1, 0.6])\n",
     "    if choice == 0:\n",
     "        nom_list.append(False)\n",
-    "        data = create_anom_data(True)\n",
+    "        data = create_anom_data(True, False)\n",
     "    if choice == 1:\n",
     "        nom_list.append(False)\n",
-    "        data = create_anom_data(False)\n",
+    "        data = create_anom_data(False,False)\n",
     "    if choice == 2:\n",
+    "        nom_list.append(False)\n",
+    "        data = create_anom_data(False, True)\n",
+    "    if choice == 3:\n",
+    "        nom_list.append(False)\n",
+    "        data = create_anom_data(True, True)\n",
+    "    if choice == 4:\n",
     "        nom_list.append(True)\n",
     "        data = create_nom_data()\n",
     "    df = df.append(data)\n",
@@ -404,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
