--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,10 +355,8 @@
     "               \"Acceleration\", \"M0C\", \n",
     "               \"M1C\", \"Lat\", \"Lon\"]\n",
     "    \n",
-    "    # plt.plot(sins)\n",
-    "    # plt.show()\n",
-    "    # plt.plot(cosins)\n",
-    "    # plt.show()\n",
+    "    plt.plot(g_lon, g_lat)\n",
+    "    plt.show()\n",
     "    # \n",
     "    # plt.plot(dgr)\n",
     "    # plt.plot(dgr_mod)\n",
@@ -381,14 +379,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = create_nom_data()\n",
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
-    "for i in range(500):\n",
+    "for i in range(10):\n",
     "    choice = np.random.choice([0, 1, 2, 3,4], p=[0.1, 0.1, 0.1, 0.1, 0.6])\n",
     "    if choice == 0:\n",
     "        nom_list.append(False)\n",
