Meaning in latent space Non_variational

--- a/Conv1D_VAE.ipynb
+++ b/Conv1D_VAE.ipynb
@@ -1919,7 +1919,7 @@
     "\n",
     "for i in encodings[model_index]:\n",
     "    scaler = StandardScaler()\n",
-    "    enc_input = scaler.fit_transform(encodings[model_index])\n",
+    "    enc_input = scaler.fit_transform(i)\n",
     "    pca = PCA(n_components=2)\n",
     "    principalComponents = pca.fit_transform(enc_input)\n",
     "    x_val = []\n",
