--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,8 +378,16 @@
    ]
   },
   {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 1,
+   "source": [
+    "TRAIN\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,13 +417,41 @@
    ]
   },
   {
+   "cell_type": "heading",
+   "metadata": {},
+   "level": 1,
+   "source": [
+    "VALIDATION\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "validation = False\n",
+    "df = create_nom_data()\n",
+    "nom_list = []\n",
+    "df = df.iloc[0:0]\n",
+    "\n",
+    "df = df.append(create_anom_data(True,False))\n",
+    "df = df.append(create_anom_data(False,False))\n",
+    "df = df.append(create_anom_data(False,True))\n",
+    "df = df.append(create_anom_data(True,True))\n",
+    "\n",
+    "for i in range(10):    \n",
+    "    df = df.append(create_nom_data())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "validation = True\n",
     "# anomalous = True\n",
     "if not validation:\n",
     "    df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
@@ -424,7 +460,7 @@
     "    df.to_csv(\"Data/Boat_nominal_data/Boat_sequence_mix_val.csv\")\n",
     "\n",
     "# if anomalous:\n",
-    "#     df.to_csv(\"Data/Boat_anom_sequence.csv\")"
+    "#     df.to_csv(\"Data/Boat_anom_sequence.csv\")\n"
    ]
   },
   {
