--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +303,7 @@
     "                    alpha_m = alpha + modify_angle(j)\n",
     "                else:\n",
     "                    alpha_m = alpha\n",
+    "                # alpha_m = alpha - modify_angle(j)\n",
     "                g_lon.append(noise_lon((start_lon - (j * dl * cos(radians(alpha_m))))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
     "        if i % 4 == 1:\n",
@@ -319,6 +320,7 @@
     "                    alpha_m = alpha - modify_angle(j)\n",
     "                else:\n",
     "                    alpha_m = alpha + modify_angle(j)\n",
+    "                # alpha_m = alpha + modify_angle(j)\n",
     "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha_m)))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
     "        if i % 4 == 3:\n",
@@ -355,8 +357,8 @@
     "               \"Acceleration\", \"M0C\", \n",
     "               \"M1C\", \"Lat\", \"Lon\"]\n",
     "    \n",
-    "    # plt.plot(g_lon, g_lat)\n",
-    "    # plt.show()\n",
+    "    plt.plot(g_lon, g_lat)\n",
+    "    plt.show()\n",
     "    # \n",
     "    # plt.plot(dgr)\n",
     "    # plt.plot(dgr_mod)\n",
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +443,22 @@
     "df = df.append(create_anom_data(True,True))\n",
     "\n",
     "for i in range(10):    \n",
-    "    df = df.append(create_nom_data())"
+    "    df = df.append(create_nom_data())\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = create_anom_data(True, False)\n",
+    "\n",
+    "save = True\n",
+    "if save:\n",
+    "    df.to_csv(\"Data/Boat_nominal_data/Boat_unseen.csv\")\n"
    ]
   },
   {
