--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +95,8 @@
     "            11.02045991, 11.02053796, 11.0213068174]\n",
     "    \n",
     "    \n",
-    "    variance_lat = 0.000005\n",
-    "    variance_lon = 0.000002\n",
+    "    variance_lat = 0\n",
+    "    variance_lon = 0\n",
     "    \n",
     "    \n",
     "    def noise_lon(coord):\n",
@@ -160,7 +160,9 @@
     "    for i, degree in enumerate(dgr):\n",
     "        sins.append(np.sin(np.deg2rad(degree)))\n",
     "        cosins.append(np.cos(np.deg2rad(degree)))\n",
-    "        \n",
+    "      \n",
+    "    plt.plot(g_lon, g_lat)\n",
+    "    plt.show()    \n",
     "        \n",
     "    columns = [\"Speed\", \"Sin\", \"Cosin\", \n",
     "               \"Acceleration\", \"M0C\", \n",
@@ -184,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "def create_anom_data(minus, both):\n",
+    "def create_anom_data(sign1, sign2):\n",
     "    def headingFromCoordinates(lat1, lon1, lat2, lon2): \n",
     "        if(lon2-lon1 < 0): #2nd and 3rd quadrant \n",
     "            heading =180 - degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2)))) \n",
@@ -257,8 +259,8 @@
     "            11.02115422, 11.02033527, 11.02038858, 11.02118961, 11.02124338,\n",
     "            11.02045991, 11.02053796, 11.0213068174]\n",
     "    \n",
-    "    variance_lat = 0.000005\n",
-    "    variance_lon = 0.000002\n",
+    "    variance_lat = 0\n",
+    "    variance_lon = 0\n",
     "    \n",
     "    def noise_lon(coord):\n",
     "        noise = coord - np.random.normal(coord, variance_lon)\n",
@@ -297,13 +299,12 @@
     "            dl = l / vertical_length\n",
     "            alpha = 180 - headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
     "            for j in range(1, vertical_length):\n",
-    "                if minus and both:\n",
+    "                if sign1 == 1:\n",
     "                    alpha_m = alpha - modify_angle(j)\n",
-    "                elif not minus and both:\n",
+    "                elif sign1 == 2:\n",
     "                    alpha_m = alpha + modify_angle(j)\n",
     "                else:\n",
     "                    alpha_m = alpha\n",
-    "                # alpha_m = alpha - modify_angle(j)\n",
     "                g_lon.append(noise_lon((start_lon - (j * dl * cos(radians(alpha_m))))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
     "        if i % 4 == 1:\n",
@@ -316,11 +317,12 @@
     "            dl = l / vertical_length\n",
     "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
     "            for j in range(1, vertical_length):\n",
-    "                if minus:\n",
+    "                if sign2 == 1:\n",
     "                    alpha_m = alpha - modify_angle(j)\n",
-    "                else:\n",
+    "                elif sign2 == 2:\n",
     "                    alpha_m = alpha + modify_angle(j)\n",
-    "                # alpha_m = alpha + modify_angle(j)\n",
+    "                else:\n",
+    "                    alpha_m = alpha\n",
     "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha_m)))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
     "        if i % 4 == 3:\n",
@@ -333,16 +335,22 @@
     "    def modify_degrees():\n",
     "        dgr_mod = []\n",
     "        index = 1\n",
-    "        for i, deg in enumerate(dgr):\n",
-    "            if abs(deg - 287.5) < 10:\n",
-    "                if minus:\n",
-    "                    dgr_mod.append(deg - modify_angle(index))    \n",
-    "                else:\n",
-    "                    dgr_mod.append(deg + modify_angle(index))\n",
+    "        for deg in dgr:\n",
+    "            if abs(deg - 107.5) < 10 and sign1 == 1:\n",
+    "                dgr_mod.append(deg - modify_angle(index))\n",
+    "                index += 1\n",
+    "            elif abs(deg - 107.5) < 10 and sign1 == 2:\n",
+    "                dgr_mod.append(deg + modify_angle(index))\n",
+    "                index += 1\n",
+    "            elif abs(deg - 287.5) < 10 and sign2 == 1:\n",
+    "                dgr_mod.append(deg - modify_angle(index))\n",
+    "                index += 1\n",
+    "            elif abs(deg - 287.5) < 10 and sign2 == 2:\n",
+    "                dgr_mod.append(deg - modify_angle(index))\n",
     "                index += 1\n",
     "            else:\n",
     "                dgr_mod.append(deg)\n",
-    "                index = 1      \n",
+    "                index = 1    \n",
     "        return dgr_mod\n",
     "    \n",
     "    dgr_mod = modify_degrees()\n",
@@ -358,8 +366,10 @@
     "               \"M1C\", \"Lat\", \"Lon\"]\n",
     "    \n",
     "    plt.plot(g_lon, g_lat)\n",
+    "    # plt.title(str(sign1)+\n",
+    "    #             str(sign2)+\":\"+str(choice))\n",
     "    plt.show()\n",
-    "    # \n",
+    "    #  \n",
     "    # plt.plot(dgr)\n",
     "    # plt.plot(dgr_mod)\n",
     "    # plt.show()\n",
@@ -389,28 +399,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = create_nom_data()\n",
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
-    "for i in range(200):\n",
-    "    choice = np.random.choice([0, 1, 2, 3,4], p=[0.1, 0.1, 0.1, 0.1, 0.6])\n",
-    "    if choice == 0:\n",
-    "        nom_list.append(choice)\n",
-    "        data = create_anom_data(True, False)\n",
+    "for i in range(30):\n",
+    "    choice = np.random.choice([0, 1, 2, 3, 4, 5, 6, 7, 8], \n",
+    "                              p=[1, 0, 0, 0, \n",
+    "                                 0, 0, 0, 0,\n",
+    "                                 0])\n",
     "    if choice == 1:\n",
     "        nom_list.append(choice)\n",
-    "        data = create_anom_data(False,False)\n",
+    "        data = create_anom_data(sign1=1, sign2=0)\n",
     "    if choice == 2:\n",
     "        nom_list.append(choice)\n",
-    "        data = create_anom_data(False, True)\n",
+    "        data = create_anom_data(sign1=2,sign2=0)\n",
     "    if choice == 3:\n",
     "        nom_list.append(choice)\n",
-    "        data = create_anom_data(True, True)\n",
+    "        data = create_anom_data(sign1=0, sign2=1)\n",
     "    if choice == 4:\n",
+    "        nom_list.append(choice)\n",
+    "        data = create_anom_data(sign1=0, sign2=2)\n",
+    "    if choice == 5:\n",
+    "        nom_list.append(choice)\n",
+    "        data = create_anom_data(sign1=1, sign2=1)\n",
+    "    if choice == 6:\n",
+    "        nom_list.append(choice)\n",
+    "        data = create_anom_data(sign1=2, sign2=2)\n",
+    "    if choice == 7:\n",
+    "        nom_list.append(choice)\n",
+    "        data = create_anom_data(sign1=2, sign2=1)\n",
+    "    if choice == 8:\n",
+    "        nom_list.append(choice)\n",
+    "        data = create_anom_data(sign1=1, sign2=2)\n",
+    "    if choice == 0:\n",
     "        nom_list.append(choice)\n",
     "        data = create_nom_data()\n",
     "    df = df.append(data)\n",
@@ -437,24 +462,21 @@
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
     "\n",
-    "df = df.append(create_anom_data(True,False))\n",
-    "df = df.append(create_anom_data(False,False))\n",
-    "df = df.append(create_anom_data(False,True))\n",
-    "df = df.append(create_anom_data(True,True))\n",
     "\n",
-    "for i in range(10):    \n",
+    "\n",
+    "for i in range(20):    \n",
     "    df = df.append(create_nom_data())\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "df = create_anom_data(True, False)\n",
+    "df = create_anom_data(sign1=2, sign2=1)\n",
     "\n",
     "save = True\n",
     "if save:\n",
@@ -463,12 +485,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "validation = False\n",
+    "validation = True\n",
     "# anomalous = True\n",
     "if not validation:\n",
     "    df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
