--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +94,12 @@
     "            11.02115422, 11.02033527, 11.02038858, 11.02118961, 11.02124338,\n",
     "            11.02045991, 11.02053796, 11.0213068174]\n",
     "    \n",
-    "    \n",
+    "    # \n",
+    "    # variance_lat = 0.000005\n",
+    "    # variance_lon = 0.000005\n",
     "    variance_lat = 0\n",
     "    variance_lon = 0\n",
+    "    \n",
     "    \n",
     "    \n",
     "    def noise_lon(coord):\n",
@@ -160,9 +163,9 @@
     "    for i, degree in enumerate(dgr):\n",
     "        sins.append(np.sin(np.deg2rad(degree)))\n",
     "        cosins.append(np.cos(np.deg2rad(degree)))\n",
-    "      \n",
-    "    plt.plot(g_lon, g_lat)\n",
-    "    plt.show()    \n",
+    "\n",
+    "    # plt.plot(g_lon, g_lat)\n",
+    "    # plt.show()    \n",
     "        \n",
     "    columns = [\"Speed\", \"Sin\", \"Cosin\", \n",
     "               \"Acceleration\", \"M0C\", \n",
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,10 +368,10 @@
     "               \"Acceleration\", \"M0C\", \n",
     "               \"M1C\", \"Lat\", \"Lon\"]\n",
     "    \n",
-    "    plt.plot(g_lon, g_lat)\n",
+    "    # plt.plot(g_lon, g_lat)\n",
     "    # plt.title(str(sign1)+\n",
     "    #             str(sign2)+\":\"+str(choice))\n",
-    "    plt.show()\n",
+    "    # plt.show()\n",
     "    #  \n",
     "    # plt.plot(dgr)\n",
     "    # plt.plot(dgr_mod)\n",
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,9 +411,9 @@
     "df = df.iloc[0:0]\n",
     "for i in range(30):\n",
     "    choice = np.random.choice([0, 1, 2, 3, 4, 5, 6, 7, 8], \n",
-    "                              p=[1, 0, 0, 0, \n",
-    "                                 0, 0, 0, 0,\n",
-    "                                 0])\n",
+    "                              p=[0.6, 0.05, 0.05, 0.05, \n",
+    "                                 0.05, 0.05, 0.05, 0.05,\n",
+    "                                 0.05])\n",
     "    if choice == 1:\n",
     "        nom_list.append(choice)\n",
     "        data = create_anom_data(sign1=1, sign2=0)\n",
@@ -471,12 +474,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "df = create_anom_data(sign1=2, sign2=1)\n",
+    "df = create_anom_data(sign1=1, sign2=1)\n",
     "\n",
     "save = True\n",
     "if save:\n",
@@ -485,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
